TRT-680: Migrate HOSS tests to use hashed reference files.

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -39,9 +39,6 @@
    "execution_count": null,
    "id": "7ce7f640",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -51,13 +48,29 @@
     "\n",
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "\n",
-    "from utilities import (\n",
-    "    compare_results_to_reference_file,\n",
-    "    print_success,\n",
-    "    remove_results_files,\n",
-    "    submit_and_download,\n",
-    "    test_is_configured,\n",
-    ")"
+    "from hoss_utilities import test_is_configured"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff97c3cd-0071-4a6e-8069-75df85b241d8",
+   "metadata": {},
+   "source": [
+    "### Import shared utilities:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cd525a9-8f2f-4542-9313-f9bcf3d10334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append('../shared_utils')\n",
+    "from utilities import print_success, submit_and_download\n",
+    "from compare import nc4_matches_reference_hash_file"
    ]
   },
   {
@@ -215,9 +228,10 @@
     "        hoss_var_bbox_file_name\n",
     "    ), 'Unsuccessful HOSS variable, bounding box request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_var_bbox_file_name, 'reference_files/hoss_var_bbox_reference.nc4', '/'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_var_bbox_file_name,\n",
+    "        'reference_files/hoss_var_bbox_reference.json',\n",
+    "    ), 'Test output does not match reference file, bounding box request.'\n",
     "\n",
     "    print_success('HOSS variable and bounding box request.')\n",
     "else:\n",
@@ -268,9 +282,10 @@
     "        grid_edge_file_name\n",
     "    ), 'Unsuccessful HOSS request crossing longitudinal edge.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        grid_edge_file_name, 'reference_files/hoss_grid_edge_reference.nc4', '/'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        grid_edge_file_name,\n",
+    "        'reference_files/hoss_grid_edge_reference.json',\n",
+    "    ), 'Test output does not match reference file, crossing longitudinal edge.'\n",
     "\n",
     "    print_success('HOSS request crossing longitudinal edge.')\n",
     "else:\n",
@@ -305,9 +320,10 @@
     "    submit_and_download(harmony_client, no_bbox_request, no_bbox_file_name)\n",
     "    assert exists(no_bbox_file_name), 'Unsuccessful HOSS request without bounding box.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        no_bbox_file_name, 'reference_files/hoss_no_bbox_reference.nc4', '/'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        no_bbox_file_name,\n",
+    "        'reference_files/hoss_no_bbox_reference.json',\n",
+    "    ), 'Test output does not match reference file, no bounding box.'\n",
     "\n",
     "    print_success('HOSS request without bounding box.')\n",
     "else:\n",
@@ -343,9 +359,10 @@
     "    submit_and_download(harmony_client, hoss_all_vars_request, hoss_all_vars_file_name)\n",
     "    assert exists(hoss_all_vars_file_name), 'Unsuccessful HOSS all-variable request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_all_vars_file_name, 'reference_files/hoss_all_vars_reference.nc4', '/'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_all_vars_file_name,\n",
+    "        'reference_files/hoss_all_vars_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS all-variable request.'\n",
     "\n",
     "    print_success('HOSS all-variable request.')\n",
     "else:\n",
@@ -408,9 +425,10 @@
     "    submit_and_download(harmony_client, hoss_temporal_request, hoss_temporal_file_name)\n",
     "    assert exists(hoss_temporal_file_name), 'Unsuccessful HOSS temporal request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_temporal_file_name, 'reference_files/hoss_temporal_reference.nc4', '/'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_temporal_file_name,\n",
+    "        'reference_files/hoss_temporal_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS temporal request.'\n",
     "\n",
     "    print_success('HOSS temporal request.')\n",
     "else:\n",
@@ -452,11 +470,10 @@
     "        hoss_named_dims_file_name\n",
     "    ), 'Unsuccessful HOSS named dimensions request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
+    "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_named_dims_file_name,\n",
-    "        'reference_files/hoss_named_dimensions_reference.nc4',\n",
-    "        '/',\n",
-    "    )\n",
+    "        'reference_files/hoss_named_dimensions_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS named dimensions request.'\n",
     "\n",
     "    print_success('HOSS named dimensions request.')\n",
     "else:\n",
@@ -518,9 +535,10 @@
     "        hoss_shape_file_name\n",
     "    ), 'Unsuccessful HOSS-Geographic polygon spatial subset request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_shape_file_name, 'reference_files/hoss_shape_file_reference.nc4', '/Grid'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_shape_file_name,\n",
+    "        'reference_files/hoss_shape_file_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS-Geographic polygon spatial subset request.'\n",
     "\n",
     "    print_success('HOSS-Geographic polygon spatial subset request.')\n",
     "else:\n",
@@ -563,9 +581,10 @@
     "    submit_and_download(harmony_client, hoss_bounds_request, hoss_bounds_file_name)\n",
     "    assert exists(hoss_bounds_file_name), 'Unsuccessful HOSS bounds request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_bounds_file_name, 'reference_files/hoss_bounds_reference.nc4', '/Grid'\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_bounds_file_name,\n",
+    "        'reference_files/hoss_bounds_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS bounds request.'\n",
     "\n",
     "    print_success('HOSS bounds request.')\n",
     "else:\n",
@@ -632,7 +651,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_projected_info, 'collection'):\n",
-    "    hoss_projected_filename = 'hoss_projected_north_slope.nc4'\n",
+    "    hoss_projected_file_name = 'hoss_projected_north_slope.nc4'\n",
     "    hoss_projected_request = Request(\n",
     "        collection=hoss_projected_info['collection'],\n",
     "        granule_id=hoss_projected_info['granule_id'],\n",
@@ -640,14 +659,17 @@
     "        variables=['NEE', 'lat', 'lon'],\n",
     "        temporal=hoss_projected_info['temporal_range'],\n",
     "    )\n",
-    "    submit_and_download(harmony_client, hoss_projected_request, hoss_projected_filename)\n",
-    "    assert exists(hoss_projected_filename), 'Unsuccessful HOSS spatial subset request.'\n",
-    "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_projected_filename,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.nc4',\n",
-    "        '/',\n",
+    "    submit_and_download(\n",
+    "        harmony_client, hoss_projected_request, hoss_projected_file_name\n",
     "    )\n",
+    "    assert exists(\n",
+    "        hoss_projected_file_name\n",
+    "    ), 'Unsuccessful HOSS-Projection-gridded bounding box request.'\n",
+    "\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_projected_file_name,\n",
+    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS-Projection-gridded bounding box request.'\n",
     "\n",
     "    print_success('HOSS-projection-gridded with bounding box.')\n",
     "else:\n",
@@ -678,7 +700,7 @@
    "outputs": [],
    "source": [
     "if test_is_configured(hoss_projected_info, 'collection'):\n",
-    "    hoss_projected_shape_filename = 'hoss_projected_north_slope_shape.nc4'\n",
+    "    hoss_projected_shape_file_name = 'hoss_projected_north_slope_shape.nc4'\n",
     "    hoss_projected_request = Request(\n",
     "        collection=hoss_projected_info['collection'],\n",
     "        granule_id=hoss_projected_info['granule_id'],\n",
@@ -687,17 +709,16 @@
     "        temporal=hoss_projected_info['temporal_range'],\n",
     "    )\n",
     "    submit_and_download(\n",
-    "        harmony_client, hoss_projected_request, hoss_projected_shape_filename\n",
+    "        harmony_client, hoss_projected_request, hoss_projected_shape_file_name\n",
     "    )\n",
     "    assert exists(\n",
-    "        hoss_projected_shape_filename\n",
-    "    ), 'Unsuccessful HOSS shapefile spatial subset request.'\n",
+    "        hoss_projected_shape_file_name\n",
+    "    ), 'Unsuccessful HOSS-Projection-Gridded shape file spatial subset request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
-    "        hoss_projected_shape_filename,\n",
-    "        'reference_files/hoss_projected_north_slope_reference.nc4',\n",
-    "        '/',\n",
-    "    )\n",
+    "    assert nc4_matches_reference_hash_file(\n",
+    "        hoss_projected_shape_file_name,\n",
+    "        'reference_files/hoss_projected_north_slope_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS-Projection-gridded shape file request.'\n",
     "\n",
     "    print_success('Subsetting projected grid with shapefile.')\n",
     "else:\n",
@@ -778,13 +799,12 @@
     "    )\n",
     "    assert exists(\n",
     "        hoss_bbox_spatial_file_name\n",
-    "    ), 'Unsuccessful HOSS bounding box spatial request.'\n",
+    "    ), 'Unsuccessful HOSS bounding box spatial, 3-D (well ordered) request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
+    "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_bbox_spatial_file_name,\n",
-    "        'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.nc4',\n",
-    "        '/',\n",
-    "    )\n",
+    "        'reference_files/hoss_bbox_3d_no_dimensions_zyx_order_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (well ordered) request.'\n",
     "\n",
     "    print_success('HOSS bounding box 3d no dimensions nominal order request.')\n",
     "else:\n",
@@ -872,11 +892,10 @@
     "        hoss_shape_file_polygon_spatial_3d_file_name\n",
     "    ), 'Unsuccessful HOSS polygon 3D variables no dimensions not nominal order request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
+    "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_3d_file_name,\n",
-    "        'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.nc4',\n",
-    "        '/',\n",
-    "    )\n",
+    "        'reference_files/hoss_shape_file_3d_no_dimensions_yxz_order_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS bounding box spatial, 3-D (poorly ordered) request.'\n",
     "\n",
     "    print_success('HOSS polygon spatial subset for 3D variables request.')\n",
     "else:\n",
@@ -961,42 +980,23 @@
     "\n",
     "    assert exists(\n",
     "        hoss_shape_file_polygon_spatial_file_name\n",
-    "    ), 'Unsuccessful HOSS polygon spatial subset request.'\n",
+    "    ), 'Unsuccessful HOSS polygon spatial subset, no dimensions request.'\n",
     "\n",
-    "    compare_results_to_reference_file(\n",
+    "    assert nc4_matches_reference_hash_file(\n",
     "        hoss_shape_file_polygon_spatial_file_name,\n",
-    "        'reference_files/hoss_shape_file_2d_no_dimensions_reference.nc4',\n",
-    "        '/',\n",
-    "    )\n",
+    "        'reference_files/hoss_shape_file_2d_no_dimensions_reference.json',\n",
+    "    ), 'Test output does not match reference file, HOSS polygon spatial subset no dimensions request.'\n",
     "\n",
     "    print_success('HOSS polygon 2d no dimensions spatial subset request.')\n",
     "else:\n",
     "    print(f'Skipping - HOSS is not configured for this test in {harmony_environment}.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca88eb71-2526-4b34-8ff7-441f869244e0",
-   "metadata": {},
-   "source": [
-    "# Clean up test outputs:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remove_results_files()"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "papermill-hoss",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1010,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "name": "SDS_Regression.ipynb"
  },
