TRT-680: Update regridder tests to use hashing functionality.

--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -57,7 +57,11 @@
     "\n",
     "`conda env create -f ./environment.yaml && conda activate papermill-regridder`\n",
     "\n",
-    "A `.netrc` file must also be located in the `test` directory of this repository."
+    "A `.netrc` file must also be located in the `test` directory of this repository.\n",
+    "\n",
+    "## Test reference files:\n",
+    "\n",
+    "The reference files stored in the harmony-regression-test repository are JSON files containing hashed values derived from all groups and variables in each file. The raw netCDF4 or HDF-5 files are hosted in the Harmony UAT AWS account in the `harmony-uat-regression-tests` S3 bucket in the `regridder` folder."
    ]
   },
   {
@@ -100,7 +104,7 @@
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
     "from utilities import print_success, submit_and_download\n",
-    "from compare import compare_results_to_reference_file"
+    "from compare import h5_matches_reference_hash_file, nc4_matches_reference_hash_file"
    ]
   },
   {
@@ -194,16 +198,19 @@
     "            width=144,\n",
     "        )\n",
     "\n",
-    "        test_output = temp_dir / Path(\"MERRA2_test.h5\")\n",
-    "        test_reference = Path(\n",
-    "            \"reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4\"\n",
+    "        merra2_test_output = temp_dir / Path(\"MERRA2_test.h5\")\n",
+    "        merra2_test_reference = Path(\n",
+    "            \"reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.json\"\n",
     "        )\n",
     "\n",
-    "        submit_and_download(harmony_client, merra_request, test_output)\n",
+    "        submit_and_download(harmony_client, merra_request, merra2_test_output)\n",
     "\n",
-    "        assert test_output.exists(), \"Unsuccessful Harmony Request: MERRA2\"\n",
+    "        assert merra2_test_output.exists(), \"Unsuccessful Harmony Request: MERRA2\"\n",
     "\n",
-    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            merra2_test_output,\n",
+    "            merra2_test_reference,\n",
+    "        ), \"Request output did not match reference file: MERRA2\"\n",
     "\n",
     "    print_success(\"Regrid MERRA2 Data Success\")\n",
     "else:\n",
@@ -246,16 +253,19 @@
     "            width=72,\n",
     "        )\n",
     "\n",
-    "        test_output = temp_dir / Path(\"ATL16_test.h5\")\n",
-    "        test_reference = Path(\n",
-    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5'\n",
+    "        atl16_test_output = temp_dir / Path(\"ATL16_test.h5\")\n",
+    "        atl16_test_reference = Path(\n",
+    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.json'\n",
     "        )\n",
     "\n",
-    "        submit_and_download(harmony_client, atl16_request, test_output)\n",
+    "        submit_and_download(harmony_client, atl16_request, atl16_test_output)\n",
     "\n",
-    "        assert test_output.exists(), 'Unsuccessful Harmony Request: ATL16'\n",
+    "        assert atl16_test_output.exists(), 'Unsuccessful Harmony Request: ATL16'\n",
     "\n",
-    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            atl16_test_output,\n",
+    "            atl16_test_reference,\n",
+    "        ), \"Request output did not match reference file: ATL16\"\n",
     "\n",
     "    print_success('Regrid ATL16 Data Success')\n",
     "else:\n",
@@ -294,16 +304,19 @@
     "            crs='EPSG:4326',\n",
     "        )\n",
     "\n",
-    "        test_output = temp_dir / Path(\"SPL4SMAU_test.h5\")\n",
-    "        test_reference = Path('reference_data/SPL4SMAU_test_reference.h5')\n",
+    "        spl4mau_test_output = temp_dir / Path(\"SPL4SMAU_test.h5\")\n",
+    "        spl4mau_test_reference = Path('reference_data/SPL4SMAU_test_reference.json')\n",
     "\n",
-    "        submit_and_download(harmony_client, spl4mau_request, test_output)\n",
+    "        submit_and_download(harmony_client, spl4mau_request, spl4mau_test_output)\n",
     "\n",
     "        assert (\n",
-    "            test_output.exists()\n",
+    "            spl4mau_test_output.exists()\n",
     "        ), 'Unsuccessful Harmony Request: SPL4MAU (projected dimensions)'\n",
     "\n",
-    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            spl4mau_test_output,\n",
+    "            spl4mau_test_reference,\n",
+    "        ), \"Request output did not match reference file: SPL4SMAU\"\n",
     "\n",
     "    print_success('Regrid SPL4MAU Data Success')\n",
     "else:\n",
@@ -347,16 +360,19 @@
     "            spatial=BBox(w=-70, s=60, e=-10, n=85),\n",
     "        )\n",
     "\n",
-    "        test_output = temp_dir / Path(\"SPL3FTP_test.h5\")\n",
-    "        test_reference = Path('reference_data/SPL3FTP_test_reference.h5')\n",
+    "        spl3ftp_test_output = temp_dir / Path(\"SPL3FTP_test.h5\")\n",
+    "        spl3ftp_test_reference = Path('reference_data/SPL3FTP_test_reference.json')\n",
     "\n",
-    "        submit_and_download(harmony_client, spl3ftp_request, test_output)\n",
+    "        submit_and_download(harmony_client, spl3ftp_request, spl3ftp_test_output)\n",
     "\n",
     "        assert (\n",
-    "            test_output.exists()\n",
+    "            spl3ftp_test_output.exists()\n",
     "        ), 'Unsuccessful Harmony Request: SPL3FTP (Implicit Grids)'\n",
     "\n",
-    "        compare_results_to_reference_file(test_output, test_reference, identical=False)\n",
+    "        assert h5_matches_reference_hash_file(\n",
+    "            spl3ftp_test_output,\n",
+    "            spl3ftp_test_reference,\n",
+    "        ), \"Request output did not match reference file: SPL3FTP (Implicit Grids)\"\n",
     "\n",
     "    print_success('Regrid SPL3FTP Data Success')\n",
     "else:\n",
@@ -383,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "name": "Regridder_Regression.ipynb"
  },
