TRT-680: Update SMAP L2 Gridder hash files.

--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -67,7 +67,11 @@
     "\n",
     "`conda env create -f ./environment.yaml && conda activate papermill-smap-l2-gridder`\n",
     "\n",
-    "A `.netrc` file must also be located in the `test` directory of this repository."
+    "A `.netrc` file must also be located in the `test` directory of this repository.\n",
+    "\n",
+    "## Test reference files:\n",
+    "\n",
+    "The reference files stored in the harmony-regression-test repository are JSON files containing hashed values derived from all groups and variables in each file. The raw netCDF4 or HDF-5 files are hosted in the Harmony UAT AWS account in the `harmony-uat-regression-tests` S3 bucket in the `smap-l2-gridder` folder."
    ]
   },
   {
