TRT-680: Update hash reference files for NSIDC ICESat-2 tests.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -60,7 +60,11 @@
     "\n",
     "* Run this notebook in a local Jupyter notebook server and simply edit the value of `harmony_host_url` in the cell below to be the desired value for your environment.\n",
     "\n",
-    "* Run the `run_notebooks.sh` script, which uses the papermill library to parameterize and run notebooks. Before running, set the environment variable `HARMONY_HOST_URL` to the desired environment's URL from the list above. This variable will override the default value in the cell below, allowing papermill to inject the correct URL into the notebook at runtime."
+    "* Run the `run_notebooks.sh` script, which uses the papermill library to parameterize and run notebooks. Before running, set the environment variable `HARMONY_HOST_URL` to the desired environment's URL from the list above. This variable will override the default value in the cell below, allowing papermill to inject the correct URL into the notebook at runtime.\n",
+    "\n",
+    "## Test reference files:\n",
+    "\n",
+    "The reference files stored in the harmony-regression-test repository are JSON files containing hashed values derived from all groups and variables in each file. The raw netCDF4 or HDF-5 files are hosted in the Harmony UAT AWS account in the `harmony-uat-regression-tests` S3 bucket in the `nsidc-icesat2` folder."
    ]
   },
   {
