Updated notebook from @srizvi-NASA

--- a/test/imagenator/imagenator_Regression.ipynb
+++ b/test/imagenator/imagenator_Regression.ipynb
@@ -2,19 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4609a539",
+   "id": "f7f9ded8",
    "metadata": {},
    "source": [
-    "# imagenator Regression Tests\n",
+    "# Regression test suite for the IMAGENATOR service:\n",
     "\n",
-    "This notebook runs a suite of regression tests against the Harmony imagenator Service chain.\n",
-    "These tests use a sample TEMPO NO₂ granule to verify that imagenator logic works as expected and that output matches reference data in `reference_data/`.\n"
+    "This notebook runs a suite of regression tests against the Harmony IMAGENATOR Service chain. These tests use a sample TEMPO NO₂ granule to verify that IMAGENATOR logic works as expected and that output matches reference data in `reference_data/`.\n",
+    "\n",
+    "\n",
+    "## Prerequisites\n",
+    "\n",
+    "- Create the `papermill-imagenator` environment:\n",
+    "  ```bash\n",
+    "  conda env create -f ./environment.yaml && conda activate papermill-imagenator\n",
+    "  ```\n",
+    "- Ensure a `.netrc` file with your Earthdata Login credentials is present here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "009f1df8",
+   "metadata": {},
+   "source": [
+    "## Import required packages:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526534cd",
+   "id": "7ce7f640",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from os.path import exists\n",
+    "from datetime import datetime\n",
+    "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "from harmony import Client, Collection, Environment, Request"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00758d6f",
+   "metadata": {},
+   "source": [
+    "## Set default parameters:\n",
+    "\n",
+    "`papermill` requires default values for parameters used on the workflow. In this case, `harmony_host_url`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f380c6",
    "metadata": {
     "tags": [
      "parameters"
@@ -22,48 +66,74 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "# (Overridden if you set HARMONY_HOST_URL in the shell before running.)"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42686ad9",
+   "id": "9237f449",
    "metadata": {},
    "source": [
-    "## Prerequisites\n",
-    "\n",
-    "- Create the `papermill-imagenator` environment:\n",
-    "  ```bash\n",
-    "  conda env create -f ./environment.yaml && conda activate papermill-imagenator\n",
-    "  ```\n",
-    "- Ensure a `.netrc` file with your Earthdata Login credentials is present here.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "964a92ad",
-   "metadata": {},
-   "source": [
-    "### Import required packages:\n"
+    "### Identify Harmony environment (for easier reference):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d204c930",
+   "id": "4420bb6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import Client, Collection, Environment, Request\n",
-    "from utilities import validate_imagenator_outputs"
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
+    "\n",
+    "harmony_environment = host_environment.get(harmony_host_url)\n",
+    "\n",
+    "if harmony_environment is not None:\n",
+    "    harmony_client = Client(env=harmony_environment)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c4efdf1",
+   "id": "fc7aef85",
    "metadata": {},
    "source": [
+    "# Begin regression tests:\n",
+    "\n",
+    "The IMAGENATOR is currently only configured against collections in the UAT environment.\n",
+    "\n",
+    "### Set up environment-dependent variables for imagenator L2:\n",
+    "\n",
+    "Define the collection and granule for testing in each environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e79fd38-0854-4b70-b8f2-2c7a91b54445",
+   "metadata": {},
+   "source": [
+    "# Begin regression tests:\n",
+    "\n",
+    "The IMAGENATOR is currently only configured against collections in the UAT environment.\n",
+    "\n",
+    "### Set up environment-dependent variables for imagenator L2:\n",
+    "\n",
+    "Define the collection and granule for testing in each environment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49fd6743-17fb-4a43-a2e7-e4263348e0ae",
+   "metadata": {},
+   "source": [
+    "# Begin regression tests:\n",
+    "\n",
+    "The IMAGENATOR is currently only configured against collections in the UAT environment.\n",
+    "\n",
     "### Set up environment-dependent variables for imagenator L2:\n",
     "\n",
     "Define the collection and granule for testing in each environment."
@@ -72,47 +142,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd001f4",
+   "id": "9ef1408b-aba9-48a9-ba0f-a880a6283919",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPO NO2 Level-2 data\n",
-    "non_production_collection = {\n",
-    "    'filter_collection': Collection(id='C1262899916-LARC_CLOUD')\n",
+    "imagenator_non_prod_information = {\n",
+    "    'collection': Collection(id='C1262899916-LARC_CLOUD'),\n",
+    "    'granule_id': 'G1269044683-LARC_CLOUD',\n",
     "}\n",
-    "non_prod_granule_data = {'filter_granules': ['G1269044683-LARC_CLOUD']}\n",
+    "associated_output = 'TEMPO_NO2_L2_V03_20240801T195948Z_S012G02_regridded_filtered_product_vertical_column_stratosphere_reformatted'\n",
     "\n",
-    "collection_data = {\n",
-    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.UAT,\n",
-    "    },\n",
-    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.SIT,\n",
-    "    },\n",
-    "    'http://localhost:3000': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.LOCAL,\n",
-    "    },\n",
+    "imagenator_env = {\n",
+    "    Environment.LOCAL: imagenator_non_prod_information,\n",
+    "    Environment.SIT: imagenator_non_prod_information,\n",
+    "    Environment.UAT: imagenator_non_prod_information,\n",
     "}\n",
     "\n",
-    "environment_information = collection_data.get(harmony_host_url)\n",
-    "\n",
-    "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])\n",
-    "    filter_collection = environment_information['filter_collection']\n",
-    "    filter_granule = environment_information['filter_granules'][0]\n",
+    "if harmony_environment in imagenator_env:\n",
+    "    imagenator_info = imagenator_env[harmony_environment]\n",
     "else:\n",
-    "    print('Skipping tests: imagenator L2 is not configured for environment')"
+    "    imagenator_info = None"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e75ca9df",
+   "id": "c93f150c-f1b3-4005-885c-4b9f65f6600f",
    "metadata": {},
    "source": [
     "## Test: imagenator L2 request on TEMPO NO2 vertical_column_stratosphere variable\n",
@@ -123,33 +177,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5365989",
+   "id": "a99357c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if environment_information is not None:\n",
-    "    # Build the request\n",
+    "if imagenator_info is not None:\n",
     "    request = Request(\n",
-    "        collection=filter_collection,\n",
-    "        granule_id=[filter_granule],\n",
+    "        collection=imagenator_info['collection'],\n",
+    "        granule_id=[imagenator_info['granule_id']],\n",
     "        variables='product/vertical_column_stratosphere',\n",
     "        format='image/png',\n",
     "    )\n",
-    "    print(harmony_client.request_as_curl(request))\n",
     "\n",
-    "    # Submit and wait for completion\n",
     "    job_id = harmony_client.submit(request)\n",
-    "    harmony_client.wait_for_processing(job_id, show_progress=True)\n",
+    "    harmony_client.wait_for_processing(job_id)\n",
+    "    \n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        output_files = [\n",
+    "            Path(future.result())\n",
+    "            for future in harmony_client.download_all(job_id, directory=temp_dir)\n",
+    "        ]\n",
+    "    \n",
+    "        assert len(output_files) == 3\n",
+    "        assert output_files[0].suffixes == ['.png']\n",
+    "        assert output_files[1].suffixes == ['.pgw']\n",
+    "        assert output_files[2].suffixes == ['.png', '.aux', '.xml']\n",
+    "    \n",
+    "        reference_data = Path('reference_data')\n",
+    "        expected_png = reference_data / f'{associated_output}.png'\n",
+    "        expected_pgw = reference_data / f'{associated_output}.pgw'\n",
+    "        expected_aux = reference_data / f'{associated_output}.png.aux.xml'\n",
+    "        \n",
+    "        assert output_files[0].read_bytes() == expected_png.read_bytes()\n",
+    "        assert output_files[1].read_bytes() == expected_pgw.read_bytes()\n",
+    "        assert output_files[2].read_bytes() == expected_aux.read_bytes()\n",
     "\n",
-    "    # Validate against reference_data/\n",
-    "    validate_imagenator_outputs(harmony_client, job_id)\n",
     "else:\n",
     "    print('Skipping test: imagenator L2 not configured for environment')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4252b16d-c5c2-4cc3-8004-1d7695641782",
+   "id": "a9fed2cb-d963-4d1c-8ac6-f521cb59cb88",
    "metadata": {},
    "source": [
     "### Set up environment-dependent variables for imagenator L3:\n",
@@ -158,49 +227,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb196c0e-1631-4845-b57f-4dd40125de04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TEMPO NO2 Level-3 data\n",
-    "non_production_collection = {\n",
-    "    'filter_collection': Collection(id='C1262899964-LARC_CLOUD')\n",
-    "}\n",
-    "non_prod_granule_data = {'filter_granules': ['G1269043414-LARC_CLOUD']}\n",
-    "\n",
-    "collection_data = {\n",
-    "    'https://harmony.uat.earthdata.nasa.gov': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.UAT,\n",
-    "    },\n",
-    "    'https://harmony.sit.earthdata.nasa.gov': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.SIT,\n",
-    "    },\n",
-    "    'http://localhost:3000': {\n",
-    "        **non_production_collection,\n",
-    "        **non_prod_granule_data,\n",
-    "        'env': Environment.LOCAL,\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "environment_information = collection_data.get(harmony_host_url)\n",
-    "\n",
-    "if environment_information is not None:\n",
-    "    harmony_client = Client(env=environment_information['env'])\n",
-    "    filter_collection = environment_information['filter_collection']\n",
-    "    filter_granule = environment_information['filter_granules'][0]\n",
-    "else:\n",
-    "    print('Skipping tests: imagenator L3 is not configured for environment')"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "7a28b942-9775-47e8-bcb0-26e1ab5f6988",
+   "id": "4935bd7e-8e73-4c30-9787-727675c96136",
    "metadata": {},
    "source": [
     "## Test: imagenator L3 request on TEMPO NO2 vertical_column_stratosphere variable\n",
@@ -211,32 +239,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c39675ba-a8df-49e5-93c3-8289d0916759",
+   "id": "a80fa22c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if environment_information is not None:\n",
-    "    # Build the request\n",
+    "imagenator_non_prod_information = {\n",
+    "    'collection': Collection(id='C1262899964-LARC_CLOUD'),\n",
+    "    'granule_id': 'G1269043414-LARC_CLOUD',\n",
+    "}\n",
+    "associated_output = 'TEMPO_NO2_L3_V03_20240822T114056Z_S002_filtered_product_vertical_column_stratosphere_reformatted'\n",
+    "\n",
+    "imagenator_env = {\n",
+    "    Environment.LOCAL: imagenator_non_prod_information,\n",
+    "    Environment.SIT: imagenator_non_prod_information,\n",
+    "    Environment.UAT: imagenator_non_prod_information,\n",
+    "}\n",
+    "\n",
+    "if harmony_environment in imagenator_env:\n",
+    "    imagenator_info = imagenator_env[harmony_environment]\n",
+    "else:\n",
+    "    imagenator_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8043c0f-1f35-4597-9c84-673d2da67f9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if imagenator_info is not None:\n",
     "    request = Request(\n",
-    "        collection=filter_collection,\n",
-    "        granule_id=[filter_granule],\n",
+    "        collection=imagenator_info['collection'],\n",
+    "        granule_id=[imagenator_info['granule_id']],\n",
     "        variables='product/vertical_column_stratosphere',\n",
     "        format='image/png',\n",
     "    )\n",
-    "    print(harmony_client.request_as_curl(request))\n",
     "\n",
-    "    # Submit and wait for completion\n",
     "    job_id = harmony_client.submit(request)\n",
-    "    harmony_client.wait_for_processing(job_id, show_progress=True)\n",
+    "    harmony_client.wait_for_processing(job_id)\n",
+    "    \n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        output_files = [\n",
+    "            Path(future.result())\n",
+    "            for future in harmony_client.download_all(job_id, directory=temp_dir)\n",
+    "        ]\n",
+    "    \n",
+    "        assert len(output_files) == 3\n",
+    "        assert output_files[0].suffixes == ['.png']\n",
+    "        assert output_files[1].suffixes == ['.pgw']\n",
+    "        assert output_files[2].suffixes == ['.png', '.aux', '.xml']\n",
+    "    \n",
+    "        reference_data = Path('reference_data')\n",
+    "        expected_png = reference_data / f'{associated_output}.png'\n",
+    "        expected_pgw = reference_data / f'{associated_output}.pgw'\n",
+    "        expected_aux = reference_data / f'{associated_output}.png.aux.xml'\n",
+    "        \n",
+    "        assert output_files[0].read_bytes() == expected_png.read_bytes()\n",
+    "        assert output_files[1].read_bytes() == expected_pgw.read_bytes()\n",
+    "        assert output_files[2].read_bytes() == expected_aux.read_bytes()\n",
     "\n",
-    "    # Validate against reference_data/\n",
-    "    validate_imagenator_outputs(harmony_client, job_id)\n",
     "else:\n",
     "    print('Skipping test: imagenator L3 not configured for environment')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a490f11c-5e1d-4c92-aaaf-7f97c5cdb245",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -253,7 +330,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.11"
-  }
+  },
+  "name": "SDS_Regression.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 5
